# bestseller

./: .dockerignore  .env.example  .gitignore  BOOK_FIX_SUMMARY.md  Dockerfile  Makefile  README.md  Untitled  alembic.ini  docker-compose.ssd.yml  docker-compose.yml  plan.md  pyproject.toml  start.sh  stop.sh  studio.sh
.audit-reports/: audit-superhero-fiction-1776147970.json  audit-superhero-fiction-1776301343.json  audit-xianxia-upgrade-1776137730.json  daozhong-opening-50-final-audit.json  plan_repairs.py  repair-plan-female-no-cp-1776303225.json  repair-plan-romantasy-1776330993.json  repair-plan-superhero-fiction-1776147970.json  repair-plan-superhero-fiction-1776301343.json  repair-plan-xianxia-upgrade-1776137730.json  scorecard-female-no-cp-1776303225.json  scorecard-romantasy-1776330993.json  scorecard-superhero-fiction-1776147970.json  scorecard-superhero-fiction-1776301343.json  scorecard-xianxia-upgrade-1776137730.json  summarize.py
.audit-reports/backups/: chapter-009.md.backup  xianxia-1776137730-ch9-pre-regen.json
.audit-reports/baselines/: female-no-cp-1776303225.json  romantasy-1776330993.json  xianxia-upgrade-1776137730.json  xianxia-upgrade.json
.audit-reports/full-sweep/: female-no-cp-1776303225.json  romantasy-1776330993.json  xianxia-upgrade-1776137730.json  xianxia-upgrade.json
.audit-reports/full-sweep-v2/: female-no-cp-1776303225.json  superhero-fiction-1776301343.json  xianxia-upgrade-1776137730.json  xianxia-upgrade.json
.audit-reports/full-sweep-v3/: female-no-cp-1776303225.json  superhero-fiction-1776147970.json  xianxia-upgrade-1776137730.json  xianxia-upgrade.json
.audit-reports/full-sweep-v4/: female-no-cp-1776303225.json  romantasy-1776330993.json  superhero-fiction-1776147970.json  superhero-fiction-1776301343.json  xianxia-upgrade-1776137730.json  xianxia-upgrade.json
.audit-reports/full-sweep-v5/: superhero-fiction-1776301343.json  xianxia-upgrade-1776137730.json  xianxia-upgrade.json
.audit-reports/full-sweep-v6/: female-no-cp-1776303225.json  romantasy-1776330993.json  superhero-fiction-1776147970.json  superhero-fiction-1776301343.json
.audit-reports/full-sweep-v7/: female-no-cp-1776303225.json  romantasy-1776330993.json  superhero-fiction-1776147970.json  superhero-fiction-1776301343.json  xianxia-upgrade-1776137730.json
.claude/: launch.json
.codex-pet/: README.md  pet.json  pet.py
.cursor/rules/: bestseller-core.mdc  bestseller-dev.mdc  bestseller-orchestrator.mdc  bestseller-output.mdc  bestseller-planning.mdc  bestseller-writing.mdc
.playwright-cli/: page-2026-03-21T02-42-13-389Z.yml  page-2026-03-21T02-42-18-985Z.yml  page-2026-03-21T02-44-28-669Z.yml  page-2026-03-21T02-44-45-416Z.yml  page-2026-03-21T02-44-59-618Z.yml  page-2026-04-11T01-36-21-258Z.yml  page-2026-05-08T07-31-57-285Z.yml
.remember/memory/: project.md  self.md
config/: canon_tianjilu.md  chapter_position_profiles.yaml  chapter_signature_audit.yaml  character_engine.yaml  compliance_policy_packs.yaml  critic_personas.yaml  default.yaml  emotion_choreography.yaml  information_choreography.yaml  mcp_servers.yaml  metadata_glossary_tianjilu.json  platform_profiles.yaml  prose_style_anchors.yaml  public_emotion_methodology.yaml  quality_gates.yaml  quality_trend_dashboard.yaml  rejection_repair_playbook.yaml  rhythm_engineering.yaml  sensory_inventory.yaml  writing_methodology.yaml
config/facets/: dimensions.yaml  legacy_expansions.yaml  style_collections.yaml
config/genre_profile_thresholds/: action-progression.yaml  base-building.yaml  eastern-aesthetic.yaml  esports-competition.yaml  female-growth-ncp.yaml  relationship-driven.yaml  strategy-worldbuilding.yaml  suspense-mystery.yaml
config/methodology_profiles/: plova_structured_writing_v1.yaml
docs/: SKILL-INSTALLATION.md  ai-context-system-prompt.md  ai-context.md  architecture.md  benchmark-capability-assessment.md  book_library_category_framework_audit.md  current-status-and-roadmap.md  database-schema.md  death-game-breaker-noninteractive-rebuild.md  fanqie-market-intelligence.md  framework-self-closure.md  interactive-fiction-design.md  maoshen-xiezuo-douyin-works.md  market-trend-presets-2026-03.md  material_import_schema.md  material_library_ops_guide.md  methodology-framework-optimization-development-plan.md  model-pilot-short-complete-30.md  novel-framework-research-and-proposal.md  novel-writing-configuration-research.md  novel-writing-flow-and-architecture.html  pageindex-integration-and-narrative-roadmap.md  perfect-novel-todo.md  platform-title-workflow.md  prompt-engineering-strategy.md  prompt-pack-design.md  qimao-signing-rules.md  quality-gate-repair-execution-plan.md  quality-gate-root-cause-analysis.md  quality-retrofit-OVERVIEW-results.md  quality-retrofit-strategy.md  whole-book-quality-verification-matrix.md  worldview-kernel-data-contract.md
douyin_plova/: image_manifest.json  ocr_input.json  ocr_results.json  plova_aweme_raw.json  plova_aweme_raw_full.json  plova_aweme_simplified.json  plova_aweme_simplified_full.json  plova_douyin_ocr.md
migrations/: env.py
scripts/: NOVEL_GENERATOR.md  adjust_forward_plan.py  apply_ja_translations.py  audit_chapter_antagonists.py  audit_daozhong_structural_integrity.py  audit_translations.py  auto_finalize.sh  auto_p3_finalize.sh  auto_resume.sh  autonomous_book_repair.py  backfill_character_lifecycle.py  backfill_death_ripples.py  backfill_invariants.py  backfill_stage_metadata.py  batch_translate_emotions.py  benchmark_capability_audit.py  book_lifecycle_quality_gate.py  bootstrap_legacy_book_state.py  build_amazon_book.py  build_kdp_from_md.py  clean_zh_source.py  cleanup_formats.py  curate_library.py  dedupe_legacy_chapters.py  diag_chapter_gap.py  docker-start.sh  docker-stop.sh  expand_bridge_chapters.py  expand_short_chapters.py  export_story_bible.py  extract_ja_residual.py  final_aggressive_cleanup.py  final_expansion.py  final_status_report.py  fix_arc_gap.py  fix_book_quality.py  fix_ch6_deaths.py  fix_chapter_targets.py  fix_content_ja.py  fix_content_v3.py  (+132 more)
story-factory/: 小说品类研究.md
tests/: conftest.py
(+9023 files in other folders)
