[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# ---------------------------------------------------------------------------
# Project metadata
# ---------------------------------------------------------------------------
[project]
name = "bestseller"
version = "0.1.0"
description = "AI-powered long-form novel generation framework"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "BestSeller Team" }]
keywords = ["ai", "novel", "generation", "llm", "creative-writing"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

# ---------------------------------------------------------------------------
# Runtime dependencies
# ---------------------------------------------------------------------------
dependencies = [
    # Data model / validation
    "pydantic>=2.12.5,<3.0",
    # Database / migrations
    "sqlalchemy>=2.0.48,<3.0",
    "greenlet>=3.2.4,<4.0",
    "alembic>=1.18.4,<2.0",
    "asyncpg>=0.30.0,<1.0",
    "psycopg[binary]>=3.2.0,<4.0",
    "pgvector>=0.3.6,<1.0",
    # Text / parsing
    "tiktoken>=0.12.0,<1.0",
    "json-repair>=0.39.1,<1.0",
    # Configuration
    "PyYAML>=6.0.3,<7.0",
    "python-dotenv>=1.2.2,<2.0",
    # HTTP / async I/O
    "httpx>=0.28.1,<1.0",
    "aiofiles>=25.1.0,<26.0",
    # Utilities
    "tenacity>=9.1.4,<10.0",
    "rich>=14.3.3,<15.0",
    # CLI
    "typer>=0.24.1,<1.0",
]

# ---------------------------------------------------------------------------
# Optional / extra dependency groups
# ---------------------------------------------------------------------------
[project.optional-dependencies]
# Export formats
export = [
    "python-docx>=1.1.0",           # .docx output
    "reportlab>=4.4.0",             # PDF output
    "ebooklib>=0.18",               # EPUB output
    "markdown>=3.8",                # Markdown processing
]

# LLM orchestration layer
llm = [
    "litellm>=1.82.4,<2.0",
]

# Embedding / retrieval stack
embeddings = [
    "sentence-transformers>=5.3.0,<6.0",
]

# Cloud / remote LLM providers (install when not using local-only mode)
cloud = [
    "anthropic>=0.52.0",            # Anthropic SDK (used transitively by litellm)
    "openai>=1.84.0",               # OpenAI SDK
    "google-generativeai>=0.8.0",   # Gemini
]

# REST API + MCP server + task queue + scheduler
api = [
    "fastapi>=0.115.0,<1.0",
    "uvicorn[standard]>=0.34.0,<1.0",
    "arq>=0.26.0,<1.0",
    "redis>=5.0.0,<6.0",
    "apscheduler>=3.10.4,<4.0",
    "sse-starlette>=2.0.0,<3.0",
    "fastmcp>=2.0.0,<3.0",
    "cryptography>=42.0.0,<44.0",
]

# All optional extras
all = [
    "bestseller[export]",
    "bestseller[llm]",
    "bestseller[embeddings]",
    "bestseller[cloud]",
    "bestseller[api]",
]

# Development tools
dev = [
    # Testing
    "pytest>=9.0.2,<10.0",
    "pytest-cov>=7.0.0,<8.0",
    "pytest-asyncio>=1.3.0,<2.0",
    "faker>=40.11.0,<41.0",         # Fake data generation
    # Code quality
    "ruff>=0.15.6,<1.0",            # Linter + formatter (replaces flake8/black/isort)
    "mypy>=1.19.1,<2.0",            # Static type checker
    "pre-commit>=4.3.0,<5.0",
    # Type stubs
    "types-PyYAML>=6.0.12",
    "types-aiofiles>=24.1.0",
    # Debug
    "ipython>=9.0.0",
    "icecream>=2.1.3",
    # Documentation
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.6.0",
    "mkdocstrings[python]>=0.29.0",
]

# ---------------------------------------------------------------------------
# CLI entry points
# ---------------------------------------------------------------------------
[project.scripts]
bestseller = "bestseller.cli.main:app"
bestseller-api = "bestseller.api.app:main"
bestseller-worker = "bestseller.worker.main:main"
bestseller-mcp = "bestseller.mcp.server:main"
bestseller-scheduler = "bestseller.scheduler.main:main"

# ---------------------------------------------------------------------------
# Hatch build settings
# ---------------------------------------------------------------------------
[tool.hatch.build.targets.wheel]
packages = ["src/bestseller"]

# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
minversion = "9.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "-ra",                  # Show summary for all except passed
    "--tb=short",
    "--cov=src/bestseller",
    "--cov-report=term-missing",
    "--cov-report=html:htmlcov",
    "--cov-report=xml:coverage.xml",
    "--cov-fail-under=80",
]
asyncio_mode = "auto"       # pytest-asyncio: auto-detect async tests
markers = [
    "unit: fast isolated unit tests",
    "integration: tests that touch DB or vector store",
    "e2e: full end-to-end generation pipeline tests",
    "slow: tests that call real LLM APIs (require API keys)",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pydantic",
]

# ---------------------------------------------------------------------------
# ruff  (linter + formatter — replaces flake8, black, isort)
# ---------------------------------------------------------------------------
[tool.ruff]
target-version = "py311"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "UP",   # pyupgrade
    "N",    # pep8-naming
    "ANN",  # flake8-annotations
    "S",    # flake8-bandit (security)
    "RUF",  # ruff-specific rules
]
ignore = [
    "ANN101",  # Missing type annotation for `self`
    "ANN102",  # Missing type annotation for `cls`
    "S101",    # Use of `assert` (allowed in tests)
]
unfixable = ["B"]  # Don't auto-fix bugbear issues (may change semantics)

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]  # Relax type annotations and security in tests

[tool.ruff.lint.isort]
known-first-party = ["bestseller"]
force-sort-within-sections = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

# ---------------------------------------------------------------------------
# mypy
# ---------------------------------------------------------------------------
[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
strict_optional = true
show_error_codes = true
pretty = true

# Per-module overrides for third-party stubs that are incomplete
[[tool.mypy.overrides]]
module = [
    "sentence_transformers.*",
    "litellm.*",
    "alembic.*",
    "asyncpg.*",
    "psycopg.*",
    "pgvector.*",
    "tiktoken.*",
    "ebooklib.*",
    "reportlab.*",
    "docx.*",
    "arq.*",
    "apscheduler.*",
    "fastmcp.*",
    "cryptography.*",
]
ignore_missing_imports = true

# ---------------------------------------------------------------------------
# Coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["src/bestseller"]
branch = true
omit = [
    "*/tests/*",
    "*/migrations/*",
    "*/__init__.py",
    "*/cli/main.py",        # CLI bootstrap, tested via e2e
]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "@(abc\\.)?abstractmethod",
]
